testdata/baselines/reference/submodule/compiler/arrowFunctionJSDocAnnotation.errors.txt
index.js(4,19): error TS7006: Parameter 'v' implicitly has an 'any' type.
index.js(13,5): error TS7006: Parameter 'param' implicitly has an 'any' type.


==== index.js (2 errors) ====
    /**
     * @param {any} v
     */
    function identity(v) {
                      ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        return v;
    }
    
    const x = identity(
        /**
         * @param {number} param
         * @returns {number=}
         */
        param => param
        ~~~~~
!!! error TS7006: Parameter 'param' implicitly has an 'any' type.
    );
    